ci: update heapsize